# a

./: sources.list
exam1/: CMakeLists.txt
exam1/src/: CMakeLists.txt  exam.h  main.cpp
exam10/: CMakeLists.txt
exam10/src/: CMakeLists.txt  exam.h  freedesktop  main.cpp
exam20/: CMakeLists.txt
exam20/src/: CMakeLists.txt  autotest.cpp  autotest.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
